# mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
src/mcp_server/: __init__.py  server.py
